--- a/src/styles/utils/_utils-dir.scss
+++ b/src/styles/utils/_utils-dir.scss
@@ -1,3 +1,5 @@
-.util-dir {
-  color: #000;
-}
+@import './mixins/prefix';
+@import './mixins/center';
+@import './mixins/position';
+@import './mixins/responsive';
+@import './mixins/size';
